--- a/apps/config/config.ini
+++ b/apps/config/config.ini
@@ -1,3 +1,3 @@
 [application]
-baseUrl         = http://carobiz.vn/carofw
-pluginsDir      = apps/plugins/
+baseUrl         = http://localhost/youaddon/Caro-Framework
+backendUrl      = admin
