--- a/apps/config/config.ini
+++ b/apps/config/config.ini
@@ -1,3 +1,5 @@
 [application]
-baseUrl         = http://localhost/youaddon/Caro-Framework
-backendUrl      = admin
+baseUrl = http://localhost/Caro-Framework
+backendUrl = admin
+title = Caro Framework
+theme = caro
